--- a/data-sync-service/Ballerina.toml
+++ b/data-sync-service/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
 org = "wso2"
-name = "g10_data_sync_service"
+name = "data_sync_service"
 version = "0.1.0"
 title = "G10 Data Sync Service"
 
